--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,8 @@ ERLC=$(shell which erlc)
 ERLC_FLAGS=-MMD -MF .$<.d -I ../.. +debug_info
 YRL_SRC=$(wildcard *.yrl)
 XRL_SRC=$(wildcard *.xrl)
-ERL_SOURCES=$(wildcard *.erl) $(YRL_SRC:%.yrl=%.erl) $(XRL_SRC:%.xrl=%.erl)
+ASN1_SRC=$(wildcard *.asn1)
+ERL_SOURCES= $(ASN1_SRC:%.asn1=%.erl) $(wildcard *.erl) $(YRL_SRC:%.yrl=%.erl) $(XRL_SRC:%.xrl=%.erl)
 ERL_OBJECTS=$(ERL_SOURCES:%.erl=../ebin/%.beam)
 ALL_OBJECTS=$(ERL_OBJECTS)
 ERL_MODULES=$(ERL_SOURCES:%.erl=%)
@@ -16,12 +17,12 @@ VERSION=$(shell git describe --always --tags)
 APP_SRC=$(APP).app.src
 APP_TARGET=../ebin/$(APP).app
 
-.PRECIOUS: $(YRL_SRC:%.yrl=%.erl) $(XRL_SRC:%.xrl=%.erl)
+.PRECIOUS: $(YRL_SRC:%.yrl=%.erl) $(XRL_SRC:%.xrl=%.erl) $(ASN1_SRC:%.asn1=%.erl)
 
 all: $(APP_TARGET) $(ALL_OBJECTS)
 
 clean:
-	rm -f $(ALL_OBJECTS) *.core .*.d
+	rm -f $(ALL_OBJECTS) *.core .*.d *.asn1db OpenSSL.erl OpenSSL.hrl
 
 ../ebin/%.beam: %.erl
 	$(ERLC) $(ERLC_FLAGS) -o ../ebin $<
@@ -31,6 +32,9 @@ clean:
 
 %.erl: %.xrl
 	$(ERLC) $<
+
+%.erl: %.asn1
+	$(ERLC) +noobj $<
 
 $(APP_TARGET): $(APP_SRC)
 	sed -e 's;{vsn,.*git};{vsn,"$(VERSION)"};' -e 's;"@@MODULES@@";$(MODULES);' $(APP_SRC) > $(APP_TARGET)
